--- a/week_5/index.html
+++ b/week_5/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Explore</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -37,23 +37,25 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="aboutMe.html">About Me</a>
+            <a class="nav-link" href="aboutUs.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="favHobby.html">Favorite Hobby</a>
+            <a class="nav-link" href="locations.html">Locations</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="other.html" tabindex="-1">Other</a>
+            <a class="nav-link" href="info.html" tabindex="-1">Info</a>
           </li>
         </ul>
       </div>
     </nav>
 
     <div class="jumbotron">
-      <h1 class="display-4">Pset5 Project</h1>
-      <p class="lead">This is a simple 4 page HTML and CSS Project for CS50.</p>
+      <h1 class="display-4">Borealis Chaser</h1>
+      <p class="lead">
+        Learn about and explore locations to see the aurora borealis.
+      </p>
       <hr class="my-4" />
-      <p>Click Links in Navbar to view other pages.</p>
+      <p class="jumbotext">Click Links in Navbar to view other pages.</p>
     </div>
 
     <!-- Footer -->
@@ -61,7 +63,7 @@
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">
         © 2019 Copyright:
-        <a href="#">Pset5</a>
+        <a href="#">Boealis Chaser</a>
       </div>
       <!-- Copyright -->
     </footer>
